tests/field/set_on_class.out
[31merror[error]: 'class' object has no attribute 'bar'
----- Traceback -----
  ┌─ <unknown>:2:7
  | class Foo:
2 | Foo.bar = "value"
  |        ^
[0m